--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "express": "^4.16.3",
     "http-errors": "~1.6.2",
     "mongoose": "^5.2.8",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "multer": "^1.3.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.3"
